project/test/semantics/unit/good/Good04_shouldStoreAnyObjectAsValuesProperly.ty
mutable class Student {
    
    values: {
        id: Int = 38493;
    }
}

singleton class ObjectsAsValues {
    
    actions: {
        main: () -> Student = {
            Student
        }
    }
}
